<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rock Spock Glock</string>
    <string name="mute_settings">Mute/Unmute</string>
    <string name="play_button">2 players on your phone</string>
    <string name="play3_button">3 players on your phone</string>
    <string name="menu_button">Go to main menu</string>
    <string name="play_again_button">Play next round</string>
    <string name="play_suddendeath_button">Play sudden-death</string>
    <string name="play_1_button">First to one</string>
    <string name="play_3_button">First to three</string>
    <string name="play_5_button">First to five</string>
    <string name="play_10_button">First to ten</string>
    <string name="player1_result">Player 1</string>
    <string name="draws_result">Draws</string>
    <string name="player2_result">Player 2</string>
    <string name="player3_result">Player 3</string>
    <string name="title_activity_player_one">Player One</string>
    <string name="player_one_headline">Player One, choose a sign:</string>
    <string name="title_activity_player_two">Player Two</string>
    <string name="player_two_headline">Player Two, choose a sign:</string>
    <string name="title_activity_player_three">Player Three</string>
    <string name="title_activity_show_result">Result</string>
    <string name="rock_button">Rock</string>
    <string name="paper_button">Paper</string>
    <string name="scissors_button">Scissors</string>
    <string name="lizard_button">Lizard</string>
    <string name="spock_button">Spock</string>
    <string name="spiderman_button">Spider-Man</string>
    <string name="batman_button">Batman</string>
    <string name="wizard_button">Wizard</string>
    <string name="glock_button">Glock</string>
    <string name="title_activity_winner">Winner</string>
    <string name="winner_example">PLAYER XXX\n IS THE WINNER!</string>
    <string name="about_text">This application is developed by F and D as a part of the course "Programming for mobile platforms" at the University of Gothenburg. \nThe concept of Rock, Paper, Scissors, Lizard, Spock was developed by Sam Kass and Karen Bryla and is licensed under a Creative Commons Attribution-NonCommercial 3.0 Unported License. It was further developed by Brian Yan to include another four signs.</string>
    <string name="title_activity_result_three">Result</string>
    <string name="title_activity_about">About</string>
    <string name="about_contact">If you have any suggestions or questions about this application feel free to contact the developers at RockSpockGlock@gmail.com</string>
    <string name="enter_player1">Enter name for Player 1</string>
    <string name="enter_player2">Enter name for Player 2</string>
    <string name="enter_player3">Enter name for Player 3</string>
    <string name="continue_button">Continue</string>

</resources>
